# P1-Helicobacter_pylori

./: request.md
1-nucmer/: README.md
1-nucmer/WGS/: 1-pipe.sh
10-fineSTRUCTURE/conf/: color.csv
10-fineSTRUCTURE/download/fineSTRUCTURE/chromopainter-0.0.4/: ChangeLog  ChromoPainterMain.c  ChromoPainterMutEM.c  ChromoPainterMutEM.h  Makefile  Makefile.am  Makefile.in  README  chromopainter  config.h  config.h.in  config.status  configure  configure.ac  configure~
10-fineSTRUCTURE/download/fineSTRUCTURE/chromopainter-0.0.4/.deps/: ChromoPainterMain.Po
10-fineSTRUCTURE/download/fineSTRUCTURE/chromopainter-0.0.4/autom4te.cache/: output.0  output.1  requests  traces.0
10-fineSTRUCTURE/python/: 1-CP-vis.py  2-fs_xml→nwk.R  3_replace_ids.py  Fat_Initial_Fs.R  heatmap.3.R
10-fineSTRUCTURE/script/: 0_Chromopantainer.sh  1_fineSTRUCTURE.sh  2-FineSTRUCTURE可视化.R
12-GWAS/example/: ID.txt  pheno.txt
12-GWAS/script/: 1_pipe.sh  2_bugwas.r  3_annotation.py
13-dNdS/conf/: yn00.ctl
13-dNdS/script/: 13_2_LLT_PamldSdN-prepare.sh  13_2_LLT_PamldSdN.sh
14-gepard/: 1-gepard.sh
2-variant/: README.md
2-variant/conf/: Example.txt
2-variant/script/: 1-Split_VCF.sh  2-Variant_count.sh  3-Freq_vis.R  4-MAF_vis.R  8-Indi_vis.R
3-PCA/: README.md
3-PCA/conf/: color.csv
3-PCA/script/: 0-Plink_PCA.sh  1-PCA_vis.R
4-Prokka/: 1-Prokka_annotation.sh  2-Panaroo_alignment.sh
8-treemix/func/: plotting_funcs.R
8-treemix/python/: 0-fam_group.py  1-bim-site.py  plink2treemix.py
8-treemix/script/: 0-0-PLINK.sh  0-fam_group.sh  2-Result.R  2-treemix-parallel.sh
(+19 files in other folders)
